start working on comprehensive potential and force system

--- a/src/makefile
+++ b/src/makefile
@@ -10,7 +10,7 @@ $(SHAREDLIB): $(OBJS)
 base.o: base.h md_ghost.h forces.h
 forces.o: forces.h base.h cspline.h md_ghost.h
 md_ghost.o: base.h md_ghost.h
-potential.o: base.h cspline.h
+potential.o: base.h cspline.h potential.h
 cspline.o: cspline.h
 clean:
 	rm -f *.o libfmd.so
