do some work on 2D "neat" array, doubly-linked list, etc

--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,7 @@
 CFLAGS = -fPIC -Wall -Wno-unused-result -O3 -fopenmp
 LFLAGS = -lm -fopenmp -lgsl -lgslcblas
 CC = mpicc
-OBJS = base.o cspline.o md_ghost.o forces.o potential.o
+OBJS = base.o cspline.o md_ghost.o forces.o potential.o array.o list.o
 SHAREDLIB = libfmd.so
 BASE_H = base.h potential.h
 
@@ -16,5 +16,6 @@ md_ghost.o: $(BASE_H) md_ghost.h
 potential.o: $(BASE_H) cspline.h potential.h array.h
 cspline.o: cspline.h
 array.o: array.h
+list.o: list.h
 clean:
 	rm -f *.o libfmd.so
