add simple timer and start work on event handling

--- a/src/makefile
+++ b/src/makefile
@@ -25,6 +25,7 @@ morse.o: morse.c morse.h config.h base.h potential.h types.h forces.h \
  list.h
 potential.o: potential.c potential.h config.h types.h base.h array.h \
  list.h eam.h forces.h cspline.h
+timer.o: timer.c timer.h config.h base.h potential.h types.h
 #####
 clean:
 	rm -f *.o libfmd.so
