include install & uninstall rules in makefile and assume the examples are executed after installing the library

--- a/src/makefile
+++ b/src/makefile
@@ -1,3 +1,4 @@
+PREFIX = /usr
 CC = mpicc
 SHAREDLIB = libfmd.so
 CFLAGS = -fPIC -Wall -Wno-unused-result -O3 -fopenmp
@@ -5,11 +6,15 @@ LFLAGS = -fopenmp -lgsl -lgslcblas
 
 OBJS ::= $(patsubst %.c,%.o,$(wildcard *.c))
 
-.PHONY: all shared clean
+.PHONY: all shared clean install uninstall
+
 all: shared
+
 shared: $(SHAREDLIB)
+
 $(SHAREDLIB): $(OBJS)
 	$(CC) $(OBJS) -shared -o $@ $(LFLAGS)
+
 ##### the following lines can be updated by using "gcc -MM *.c"
 array.o: array.c array.h config.h
 base.o: base.c base.h config.h potential.h types.h md_ghost.h forces.h
@@ -27,5 +32,16 @@ potential.o: potential.c potential.h config.h types.h base.h array.h \
  list.h eam.h forces.h cspline.h
 timer.o: timer.c timer.h config.h base.h potential.h types.h
 #####
+
 clean:
-	rm -f *.o libfmd.so
+	rm -f $(OBJS) $(SHAREDLIB)
+
+install: $(SHAREDLIB)
+	mkdir -p $(DESTDIR)$(PREFIX)/lib
+	mkdir -p $(DESTDIR)$(PREFIX)/include
+	cp fmd.h $(DESTDIR)$(PREFIX)/include/
+	cp $(SHAREDLIB) $(DESTDIR)$(PREFIX)/lib/
+
+uninstall:
+	rm -f $(DESTDIR)$(PREFIX)/include/fmd.h
+	rm -f $(DESTDIR)$(PREFIX)/lib/$(SHAREDLIB)
